athorization and authentication

--- a/pay_all/app/views/devise/registrations/new.html.erb
+++ b/pay_all/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,5 @@
-<div class="mainContent">
-  <div class="grid">
+<div class="container-fluid">
+  <div class="row">
     <h1 class="largeHeader">Sign up</h1>
     <div class="col_1">
 
