--- a/pay_all/app/views/layouts/application.html.erb
+++ b/pay_all/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
 	              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
 	            </ul>
 	          </li>
-	        <% else %>
+	          <li class="nav-link"><%= link_to "Users", users_path %></li>
+          <li class="nav-link"><%= link_to "Log out", destroy_user_session_path, method: "delete" %></li>
+        	<% else %>
 	          <li><%= link_to 'Log In', new_user_session_path %></li>
 	          <li><%= link_to 'Sign Up', new_user_registration_path %></li>
 	        <% end %>
@@ -52,7 +54,7 @@
 	    <h1><%= yield :header %></h1>
 	  <%= yield %>
 	</div>
-
+	
 	</body>
 
 </html>
