add user, edit user option for admin and changing of role via admin using ajax

--- a/pay_all_admin/app/views/check/new.html.erb
+++ b/pay_all_admin/app/views/check/new.html.erb
@@ -1,6 +1,6 @@
-<div class="mainContent">
-  <div class="grid">
-    <h1 class="largeHeader">Sign up</h1>
+<div class="container">
+  <div class="jumbotron">
+    <h1 class="largeHeader">Enter OTP</h1>
     <div class="col_1">
 
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
