--- a/pay_all_admin/app/views/users/new.html.erb
+++ b/pay_all_admin/app/views/users/new.html.erb
@@ -2,15 +2,13 @@
   <div class="jumbotron">
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
-        <h1 class="largeHeader">Sign up</h1>
+        <h1 class="largeHeader">Add User</h1>
         
-        <%= form_for(@user, url: user_registration_path) do |f| %>
-          <%= devise_error_messages! %>
+        <%= form_for(@user) do |f| %>
 
           <div class="form-group">
             <%= f.label :name %><br />
             <%= f.text_field :name, class: "form-control", autofocus: true %>
-            <small class="text-muted">We'll never share your email with anyone else.</small>
           </div>
 
           <div class="form-group">
@@ -32,12 +30,15 @@
           </div>
 
           <div class="container">
-            <%= f.submit "Sign up", class: "btn-primary btn-lg" %>
+            <%= f.submit "Add", class: "btn-primary btn-lg" %>
+          </div>
+
+          <div>
+            
           </div>
         <% end %>
       </div>
     </div>
-    <%= render "devise/shared/links" %>
   </div>
 </div>
 
