--- a/pay_all_admin/app/views/verifications/new.html.erb
+++ b/pay_all_admin/app/views/verifications/new.html.erb
@@ -1,19 +1,22 @@
-<div class="mainContent">
-  <div class="grid">
-    <h1 class="largeHeader">Enter OTP</h1>
-    <div class="col_1">
+<div class="container">
+  <div class="jumbotron">
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+      <h1 class="largeHeader">Enter OTP</h1>
 
-      <%= form_for(@user, url: verify_user_verifications_path(@user), html: { method: 'put'} ) do |f| %>
-        <%= devise_error_messages! %>
+        <%= form_for(@user, url: verify_user_verifications_path(@user), html: { method: 'put'} ) do |f| %>
+          <%= devise_error_messages! %>
 
-        <div class="field">
-          <%= f.label :verification_code %><br />
-          <%= f.text_field :verification_code, autofocus: true, value: nil %>
-        </div>
+          <div class="field">
+            <%= f.label :verification_code %><br />
+            <%= f.text_field :verification_code, autofocus: true, value: nil, class: 'form-control' %>
+          </div>
 
-        <%= f.submit "Submit", class: 'btn btn-primary' %>
-
-      <% end %>
+          <%= f.submit "Submit", class: 'btn btn-primary' %>
+          
+        <% end %>
+        
+      </div>
     </div>
   </div>
 </div>
