--- a/pay_all_admin/app/views/users/new.html.erb
+++ b/pay_all_admin/app/views/users/new.html.erb
@@ -29,13 +29,15 @@
             <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
           </div>
 
+          <div>
+            <%= f.check_box :is_verified, {}, true, false  %>
+            <%= f.label "Verify Account" %>
+          </div>
+
           <div class="container">
             <%= f.submit "Add", class: "btn-primary btn-lg" %>
           </div>
 
-          <div>
-            
-          </div>
         <% end %>
       </div>
     </div>
